--- a/test.html
+++ b/test.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>TTS Demo</title>
 	<script type="text/javascript" src="//code.jquery.com/jquery.min.js"></script>
-	<script type="text/javascript" src="https://raw.github.com/happyworm/jPlayer/master/jquery.jplayer/jquery.jplayer.js"></script>
 	<script type="text/javascript" src="google-tts-helper.js"></script>
 </head>
 <body>
@@ -14,7 +13,7 @@
 	</div>
 	
 	<div data-tts="ar">
-		اهلا وسهلا
+		اهلا وسهلا. كيف حالٌك
 	</div>
 	
 </body>
