--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		
 		<code>
-		&lt;script&gt;<br/>			tts.init(); tts.attach('.some_css_class');<br/>		&lt;/script&gt;
+		&lt;script&gt;<br/>			tts.attach('.some_css_class');<br/>		&lt;/script&gt;
 		</code>
 	</div>
 	
@@ -37,7 +37,7 @@
 			<a href="#" class="click-button">Click here</a>
 		</div>
 		<code>
-		&lt;script&gt;<br/>			tts.init(); tts.clicker('.click-button', '.text-container', 'ar');<br/>		&lt;/script&gt;
+		&lt;script&gt;<br/>			tts.clicker('.click-button', '.text-container', 'ar');<br/>		&lt;/script&gt;
 		</code>
 	</div>
 	
@@ -49,7 +49,7 @@
 			تجربة وجود اكثر من مقال ديناميكي
 		</div>
 		<code>
-		&lt;script&gt;<br/>			tts.init(); tts.autoClicker('&lt;a href="#"&gt;Click here&lt;/a&gt;', '.text-container-auto', 'ar');<br/>		&lt;/script&gt;
+		&lt;script&gt;<br/>			tts.autoClicker('&lt;a href="#"&gt;Click here&lt;/a&gt;', '.text-container-auto', 'ar');<br/>		&lt;/script&gt;
 		</code>
 	</div>
 	
